--- a/DisasterRecovery/Views/TimeCardDetails/IndexEdit.cshtml
+++ b/DisasterRecovery/Views/TimeCardDetails/IndexEdit.cshtml
@@ -34,36 +34,44 @@
                 Job
             </th>
 
+            <th>
+                Date Worked
+            </th>
+
             <th></th>
         </tr>
     </thead>
 
     @foreach (var item in Model)
     {
-        <tr>
-            <td> </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Hours)
+<tr>
+    <td> </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Hours)
 
-                @{ if (item.Hours > item.JobList.MaxHour)
-                    {
-                        <Span style="color:red"> (Exceeded Max Hours)</Span>
-                        ViewBag.Alert = 1;
-                    }
-                }
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Amount)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.JobList.JobName)
-            </td>
+        @{ if (item.Hours > item.JobList.MaxHour)
+            {
+                <Span style="color:red"> (Exceeded Max Hours)</Span>
+                ViewBag.Alert = 1;
+            }
+        }
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Amount)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.JobList.JobName)
+    </td>
 
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.IdTimeCardDetails }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.IdTimeCardDetails })
-            </td>
-        </tr>
+    <td>
+        @Html.DisplayFor(modelItem => item.TcDate)
+    </td>
+
+    <td>
+        @Html.ActionLink("Edit", "Edit", new { id = item.IdTimeCardDetails }) |
+        @Html.ActionLink("Delete", "Delete", new { id = item.IdTimeCardDetails })
+    </td>
+</tr>
     }
     <tr>
         <th> Totals</th>
