--- a/DisasterRecovery/Views/TimeCardDetails/Create.cshtml
+++ b/DisasterRecovery/Views/TimeCardDetails/Create.cshtml
@@ -35,8 +35,16 @@
     </div>
 
     <div class="form-group">
+        @Html.LabelFor(model => model.TcDate, "Date Worked", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.TcDate, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.TcDate, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-default" />
+            <input type="submit" value="Create" />
         </div>
     </div>
 
