--- a/DisasterRecovery/Views/JobLists/Edit.cshtml
+++ b/DisasterRecovery/Views/JobLists/Edit.cshtml
@@ -18,7 +18,8 @@
         @Html.HiddenFor(model => model.IdJobList)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.IdSubContractor, "IdSubContractor", htmlAttributes: new { @class = "control-label col-md-2" })
+            Contractor
+            @*@Html.LabelFor(model => model.IdSubContractor, "IdSubContractor", htmlAttributes: new { @class = "control-label col-md-2" })*@
             <div class="col-md-10">
                 @Html.DropDownList("IdSubContractor", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.IdSubContractor, "", new { @class = "text-danger" })
@@ -26,7 +27,8 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.JobName, htmlAttributes: new { @class = "control-label col-md-2" })
+            Job Name
+            @*@Html.LabelFor(model => model.JobName, htmlAttributes: new { @class = "control-label col-md-2" })*@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.JobName, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.JobName, "", new { @class = "text-danger" })
@@ -34,7 +36,8 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.JobDescription, htmlAttributes: new { @class = "control-label col-md-2" })
+            Job Description
+            @*@Html.LabelFor(model => model.JobDescription, htmlAttributes: new { @class = "control-label col-md-2" })*@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.JobDescription, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.JobDescription, "", new { @class = "text-danger" })
@@ -42,7 +45,8 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Rate, htmlAttributes: new { @class = "control-label col-md-2" })
+            Hourly Rate
+            @*@Html.LabelFor(model => model.Rate, htmlAttributes: new { @class = "control-label col-md-2" })*@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Rate, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Rate, "", new { @class = "text-danger" })
@@ -50,7 +54,8 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.MaxHour, htmlAttributes: new { @class = "control-label col-md-2" })
+            Max Hour
+            @*@Html.LabelFor(model => model.MaxHour, htmlAttributes: new { @class = "control-label col-md-2" })*@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.MaxHour, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.MaxHour, "", new { @class = "text-danger" })
